--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "name": "stashtrack",
     "version": "0.1.0",
+    "main": "server.js",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "express": "^4.17.1",
         "fitty": "^2.3.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
