--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
     "name": "stashtrack",
     "version": "0.1.0",
-    "main": "server.js",
+    "main": "index.js",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "aws-sdk": "^2.802.0",
+        "axios": "^0.21.0",
+        "bcryptjs": "^2.4.3",
+        "cookie-session": "^1.4.0",
+        "csurf": "^1.11.0",
         "express": "^4.17.1",
         "fitty": "^2.3.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.0",
-        "serve": "^11.3.2"
+        "serve": "^11.3.2",
+        "spiced-pg": "^1.0.3",
+        "util": "^0.12.3"
     },
     "scripts": {
         "dev": "react-scripts start",
@@ -23,6 +30,7 @@
         "eject": "react-scripts eject",
         "heroku-postbuild": "npm run build"
     },
+    "proxy": "http://localhost:5000/",
     "eslintConfig": {
         "extends": "react-app"
     },
